--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,4 @@
-
-plugins {
-    id 'com.android.library'
-}
+apply plugin: 'com.android.library'
 //configurations {
 //    configurations.maybeCreate("default")
 //    artifacts.add("default", file('unity-ads.aar'))
